将熊猫币充值方法独立出来，修改各端充值调用